# lol-iot.iac

./: .gitignore  .gitmodules  .tool-versions  Makefile  README.md  base.hcl  mise.toml  public.pem
charts/: casdoor-helm-charts-v1.514.0.yaml  cert-manager-v1.13.3.yaml  cilium-1.14.6.yaml  local-path-provisioner-0.0.25.tgz  local-path-provisioner-0.0.25.yaml  local-path-provisioner-0.0.26.yaml  loki-distributed-0.78.4.yaml  postgresql-13.4.2.yaml  rook-ceph-cluster-v1.13.4.tgz  rook-ceph-cluster-v1.13.6.yaml  (+5 more)
home/lol-iot/kubespray/: Makefile  ansible.cfg  pyproject.toml  remove-node.yml  reset.yml
home/lol-iot/kubespray/inventory/: hosts.yaml  kubespray_vars.yaml
home/lol-iot/kubespray/inventory/group_vars/all/: all.yml
home/lol-iot/kubespray/inventory/group_vars/k8s_cluster/: k8s-cluster.yml
home/lol-iot/kubespray/playbooks/: allow_rsync.yaml  install_apps.yaml
home/lol-iot/kubespray/roles/lol_iot/apps/k8s/meta/: main.yaml
home/lol-iot/kubespray/roles/lol_iot/apps/k8s/tasks/: main.yaml
home/lol-iot/kubespray/roles/lol_iot/apps/pip/tasks/: main.yaml
home/lol-iot/kubespray/roles/lol_iot/apps/tasks/: main.yaml
home/lol-iot/kubespray/roles/lol_iot/download/defaults/: main.yaml
home/lol-iot/kubespray/roles/lol_iot/download/tasks/: main.yaml
home/lol-iot/pulumi/: README.md  pyproject.toml
home/lol-iot/pulumi/lol_iot_iac/core/: Pulumi.core.yaml  __main__.py
home/lol-iot/pulumi/lol_iot_iac/core/network/: __init__.py
home/lol-iot/pulumi/lol_iot_iac/monitoring/: Pulumi.monitoring.yaml  Pulumi.yaml  __main__.py  metrics_server.py  variable.py
(+136 files in other folders)
