[tool.poetry]
name = "kubespray"
version = "0.1.0"
description = ""
authors = ["Hyeonki Hong <hhk7734@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ansible = "8.5.0"
jmespath = "1.0.1"
netaddr = "0.9.0"
pbr = "5.11.1"
ruamel-yaml = "0.17.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
